# olx_parser_playwriter

./: .gitignore  README.md  main.py  mongo_atlas.py  olx_page.html  pyproject.toml  requirements.txt  settings.py
.github/workflows/: daily-run.yml
