[project]
name = "playwriter-olx"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Smolynets",email = "oleh_smolynets@epam.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "playwright-stealth (==1.0.6)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "setuptools (>=80.10.2,<81.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pymongo[srv] (>=4.16.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
